--- a/VerticalSliceArchitecture.API/appsettings.Development.json
+++ b/VerticalSliceArchitecture.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PsqlConnection": "Server=localhost; Database=VerticalSliceDb; Port=5432; User Id=postgres; Password=Ma2800288; Timeout=30; Command Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
